<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_ujbeteg"
        android:title="@string/ujbeteg_gomb"
        android:icon="@drawable/ic_add_black_24dp"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/menu_ujszerv"
        android:title="@string/ujszerv_gomb"
        android:icon="@drawable/ic_add_box_black_24dp"
        android:orderInCategory="400"
        app:showAsAction="ifRoom"></item>
    <item
        android:title="@string/Refresh"
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:orderInCategory="200"
        app:showAsAction="ifRoom"


     ></item>

</menu>