<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hu.petrik.betegszervapp.UjbetegActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ujbeteg_neve" />

        <EditText
            android:id="@+id/ujbetegname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ujbeteg_tajszama" />

        <EditText
            android:id="@+id/ujbetegtaj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ujbeteg_szerv" />

        <Spinner
            android:id="@+id/ujbeteg_szerv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/szervek" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ujbeteg_tipus" />

        <EditText
            android:id="@+id/ujbeteg_tipus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/ujbeteg_gomb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ujbeteg_gomb" />


    </LinearLayout>



</android.support.constraint.ConstraintLayout>
